# FastGaussianAccumulator

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  Makefile  README.md  dev-requirements.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: tests.yml  wheels.yml
bench/: CMakeLists.txt  hilbert_bench.cpp  kd_bench.cpp  run.cpp  s2_bench.cpp
cmake/: Extras.cmake  Extras.txt
docs/: builddocs.html  genindex.html  index.html  index.rst  introduction.html  make_docs.py  objects.inv  search.html  searchindex.js
docs/cpp_api/: classFastGA_1_1GaussianAccumulator.html  classFastGA_1_1GaussianAccumulatorKD.html  classFastGA_1_1GaussianAccumulatorOpt.html  classFastGA_1_1GaussianAccumulatorS2.html  classFastGA_1_1Ico_1_1IcoCharts.html  classFastGA_1_1Ico_1_1Image.html  class_fast_g_a_1_1_gaussian_accumulator.html  class_fast_g_a_1_1_gaussian_accumulator_k_d.html  class_fast_g_a_1_1_gaussian_accumulator_opt.html  class_fast_g_a_1_1_gaussian_accumulator_s2.html  class_fast_g_a_1_1_gaussian_accumulator_s2_beta.html  class_fast_g_a_1_1_ico_1_1_ico_charts.html  class_fast_g_a_1_1_ico_1_1_image.html  class_view_hierarchy.html  cpp_library_root.html  define_FastBinarySearch_8hpp_1a1b173d22e57d9395897acbd8de62d505.html  define_FastBinarySearch_8hpp_1a724fb9f82013c782db5c3c12ea36aac8.html  define_FastBinarySearch_8hpp_1ada9d7622865275ae4289dff050f1589e.html  define_FastGA_2FastGA_8hpp_1a298a043757d91c9ccda553c68d16cedb.html  define_FastGA_2FastGA_8hpp_1a537938f4e4e78e5dc094178a5c679fc9.html  define_FastGA_2FastGA_8hpp_1a69f62396bed458a49483bdc07f1edbe4.html  define_FastGA_2FastGA_8hpp_1ab19090cd661f9676afac2e12296c4afc.html  define_FastGA_2FastGA_8hpp_1ac888787f8aede6570789b817d9b263fc.html  define_FastGA_2FastGA_8hpp_1ae762b22d19892786aec6deca8a507573.html  define_FastGA_8hpp_1a525335710b53cb064ca56b936120431e.html  define_Helper_8hpp_1a525335710b53cb064ca56b936120431e.html  define_Helper_8hpp_1aa101e273d8dae96156403a869e2f3b18.html  define_Helper_8hpp_1aa1121f797750b9f74f56b152d4245ec0.html  define_Helper_8hpp_1ae71449b1cc6e6250b91f539153a7a0d3.html  define_NanoS2ID_8hpp_1a54ea0bbe5b530b9fdf833b59a6ffa8d1.html  define_NanoS2ID_8hpp_1a743b7a730d4ac0d4339829483fecf991.html  define_NanoS2ID_8hpp_1a77a043d3e4245009008f53babb9e1788.html  define_NanoS2ID_8hpp_1af29530fb057719841b41223c044891e7.html  define__fast_binary_search_8hpp_1a1b173d22e57d9395897acbd8de62d505.html  define__fast_binary_search_8hpp_1a724fb9f82013c782db5c3c12ea36aac8.html  define__fast_binary_search_8hpp_1ada9d7622865275ae4289dff050f1589e.html  define__fast_g_a_2_fast_g_a_8hpp_1a298a043757d91c9ccda553c68d16cedb.html  define__fast_g_a_2_fast_g_a_8hpp_1a537938f4e4e78e5dc094178a5c679fc9.html  define__fast_g_a_2_fast_g_a_8hpp_1a69f62396bed458a49483bdc07f1edbe4.html  define__fast_g_a_2_fast_g_a_8hpp_1ab19090cd661f9676afac2e12296c4afc.html  (+284 more)
docs/python_api/: fastga.BBOX.html  fastga.BucketS2.html  fastga.BucketUInt32.html  fastga.BucketUInt64.html  fastga.GaussianAccumulatorKD.html  fastga.GaussianAccumulatorOpt.html  fastga.GaussianAccumulatorS2.html  fastga.GaussianAccumulatorS2Beta.html  fastga.GaussianAccumulatorUI32.html  fastga.GaussianAccumulatorUI64.html  fastga.IcoCharts.html  fastga.IcoMesh.html  fastga.Image.html  fastga.MatX12I.html  fastga.MatX2I.html  fastga.MatX2d.html  fastga.MatX3I.html  fastga.MatX3d.html  fastga.MatX6I.html  fastga.VectorDouble.html  fastga.VectorInt.html  fastga.VectorUInt8.html  fastga.VectorULongInt.html  fastga.convert_normals_to_hilbert.html  fastga.convert_normals_to_s2id.html  fastga.html  fastga.peak_and_cluster.average_clusters.html  fastga.peak_and_cluster.find_peaks_from_accumulator.html  fastga.peak_and_cluster.find_peaks_from_ico_charts.html  fastga.peak_and_cluster.get_high_intensity_peaks.html  fastga.peak_and_cluster.get_point_clusters.html  fastga.peak_and_cluster.html  fastga.peak_and_cluster.normalized.html  fastga.refine_icochart.html  fastga.refine_icosahedron.html  fastgac.BBOX.html  fastgac.BucketS2.html  fastgac.BucketUInt32.html  fastgac.BucketUInt64.html  fastgac.GaussianAccumulatorKD.html  (+30 more)
docs/tutorial/C++/: basic.html  index.html
docs/tutorial/Python/: basic.html  basicdemo.html  index.html
examples/cpp/: CMakeLists.txt  example_icochart.cpp  example_kd.cpp  example_nano.cpp  example_s2.cpp
examples/python/: run_ga.py  run_hilbert.py  run_ico.py  run_meshes.py  run_normals.py  scratch.py
examples/python/archive/: run_normals copy.py
examples/python/notebooks/: Basic.ipynb
include/: FastGA.hpp  gaussian_integrator.hpp
include/FastGA/: FastBinarySearch.hpp  FastGA.hpp  FastGAS2.hpp  GA.hpp  Helper.hpp  Ico.hpp  NanoFlannAdaptors.hpp
include/Hilbert/: Hilbert.hpp
include/NanoS2ID/: NanoS2ID.hpp
include/gaussian_integrator/: gi.hpp
paper/: README.md  plot_hilbert.py  plot_linear_interp.py  plot_mesh.py
scripts/: clang-tidy.sh  make_release.sh  rename_project.py
src/: CMakeLists.txt  gaussian_integrator.cpp  version.txt
src/FastGA/: CMakeLists.txt  FastGA.cpp  FastGAS2.cpp  GAConfig.cpp  GAConfig.hpp.in  Helper.cpp  Hilbert.cpp
src/Python/: CMakeLists.txt  MANIFEST.in  README.md  make_python_package.cmake  requirements.txt  setup.py
src/Python/fastga/: __init__.py  o3d_util.py  peak_and_cluster.py
src/Python/fastga/scikit_image/: rank_order.py  skimage_feature_peak.py
src/Python/fastga_pybind/: fastga_glue.hpp  fastga_pybind.cpp  fastga_pybind.hpp
src/Python/fastga_pybind/docstring/: docstring.cpp  docstring.hpp
src/Python/fastgac/: __init__.py  helper.py  peak_and_cluster.py
src/Python/fastgac_pybind/: fastgac_pybind.cpp  fastgac_pybind.hpp
src/Python/fastgac_pybind/docstring/: docstring.cpp  docstring.hpp
src/Python/slowga/: __init__.py  __main__.py  helper.py  icosahedron.py  peak_and_cluster.py  projections.py
src_docs/: Doxyfile  builddocs.rst  conf.py  index.rst  introduction.rst  make_docs.py
test/: test.cpp
tests/: CMakeLists.txt
tests/cpp/: CMakeLists.txt  run-tests.cpp
tests/python/: conftest.py  test_peak.py  test_peak_transition.py
(+10 files in other folders)
